# Noahlabs

./: .env.example  .gitignore  README.md
.cursor/: permissions.json
document/: planning.md  (+2 more)
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/: .dockerignore  .env.example  .gitignore  CHALLENGE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/.github/workflows/: ci.yml
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/docker/: entrypoint.sh
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/migrations/: env.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/migrations/versions/: 0001_create_tasks.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/scripts/: reviewer-demo.sh  run-tests.sh
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/src/taskpool/: __init__.py  config.py  db.py  exceptions.py  logging.py  observability.py  repository.py  service.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/src/taskpool/cli/: __init__.py  admin.py  consumer.py  producer.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/src/taskpool/domain/: __init__.py  task.py  topics.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/tests/: conftest.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/tests/concurrency/: test_skip_locked.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/tests/e2e/: test_producer_consumer.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/tests/integration/: test_migrations.py  test_service.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/tests/typing/: test_static_contracts.py
noah-labs-challenge-classroom-backend-challenge-task-pool-backend-challenge-task-pool/tests/unit/: test_handler_routing.py  test_misc.py  test_payloads.py  test_registry.py
(+28 files in other folders)
